Push Pull untracked files

--- a/Lesson 2/02_03/02_03.html
+++ b/Lesson 2/02_03/02_03.html
@@ -13,7 +13,8 @@
       visible-md  medium grid displaying. The grid stacks horizontally &lt; 992px.
       visible-sm  small grid displaying. The grid stacks horizontally &lt; 768px. 
       visible-xs  extra small grid displaying This grid is always horizontal
-      offset -      col-lg-offset-1  col-md-offset-1   col-sm-offset-1 col-xs-offset-1   offset is on the left side
+     
+      mx-auto
 -->
 <body>
 <div class="container">
